consolidate file server access to a files.js service file fix list titles wrapping make file browser refresh work from new file server make thumbnails work from new file server

--- a/src/base.css
+++ b/src/base.css
@@ -314,6 +314,14 @@ li.header {
     min-width: 10em;
     list-style: none;
 }
+.data-list .title {
+    white-space: nowrap;
+    overflow: hidden;
+}
+.data-list .trailing-text {
+    white-space: nowrap;
+    overflow: hidden;
+}
 
 
 
