--- a/src/ui/grid3layout.css
+++ b/src/ui/grid3layout.css
@@ -9,7 +9,7 @@
 }
 .grid2 {
     display: grid;
-    grid-template-columns: 1fr 2.0fr;
+    grid-template-columns: 15em 2.0fr;
     grid-template-rows: 3em 1fr 2em;
     grid-gap: 1px;
     overflow: hidden;
